--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://kit.fontawesome.com/8ee87fbffa.js" crossorigin="anonymous"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+ 
 </head>
 <body>
   <div class="card">
@@ -66,13 +66,13 @@
         <span class="material-symbols-outlined seats">chair</span>
  
       </p> 
-      <p> <span class="material-symbols-outlined seats">chair</span>
+      <p><span class="material-symbols-outlined seats">chair</span>
         <span class="material-symbols-outlined seats">chair</span>
         <span class="material-symbols-outlined seats">chair</span>
         <span class="material-symbols-outlined seats">chair</span>
    
       </p> 
-      <p> <span class="material-symbols-outlined  seats">chair</span>
+      <p><span class="material-symbols-outlined  seats">chair</span>
         <span class="material-symbols-outlined seats">chair</span>
         <span class="material-symbols-outlined seats">chair</span>
         <span class="material-symbols-outlined seats">chair</span>
@@ -130,6 +130,7 @@
 
   </div>
      <p>screen</p>
+  <!-- <div class="border"></div> -->
   <div class="border"></div>
   </section>
   <footer>
