--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <body>
     <div class="card">
       <main>
-        <button><ion-icon name="arrow-back-outline"></ion-icon></button>
+        <button>
+          <ion-icon name="arrow-back-outline" class="arrow"></ion-icon>
+        </button>
         <div class="mainh3">
           <h3>Guardians The Galaxy</h3>
           <p>📍Cineplex Entertainment, Toronto ON</p>
@@ -32,92 +34,95 @@
       <section>
         <div class="small-sect">
           <p class="mitan">
-            <span class="material-symbols-outlined"> chair </span> Availiable
+            <span class="material-symbols-outlined Availiable"> chair </span>
+            Availiable
           </p>
           <p class="mitan">
-            <span class="material-symbols-outlined"> chair </span> Booked
+            <span class="material-symbols-outlined Availiable1"> chair </span>
+            Booked
           </p>
           <p class="mitan">
-            <span class="material-symbols-outlined"> chair </span> Selected
+            <span class="material-symbols-outlined Availiable2"> chair </span>
+            Selected
           </p>
         </div>
 
         <div class="mitan1">
           <p>
+            <span class="material-symbols-outlined seats rene">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
+          </p>
+          <p>
             <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
           </p>
           <p>
             <span class="material-symbols-outlined seats">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
-          </p>
-          <p>
-            <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
           </p>
           <p>
-            <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
           </p>
 
           <p>
+            <span class="material-symbols-outlined seats pink">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
           </p>
           <p>
             <span class="material-symbols-outlined seats">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
           </p>
           <p>
             <span class="material-symbols-outlined seats">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
           </p>
         </div>
 
         <div class="mitan2">
           <p>
-            G <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
-          </p>
-          <p>
-            F <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
+            G <span class="material-symbols-outlined seats pink">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
           </p>
           <p>
-            E <span class="material-symbols-outlined seats">chair</span>
+            F <span class="material-symbols-outlined seats pink">chair</span>
+            <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
+            <span class="material-symbols-outlined seats">chair</span>
+          </p>
+          <p>
+            E <span class="material-symbols-outlined seats pink">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
           </p>
           <p>
             D <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
           </p>
 
           <p>
-            C <span class="material-symbols-outlined seats">chair</span>
+            C <span class="material-symbols-outlined seats pink">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
           </p>
           <p>
@@ -128,9 +133,9 @@
           </p>
           <p>
             A <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
             <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
-            <span class="material-symbols-outlined seats">chair</span>
+            <span class="material-symbols-outlined seats pink">chair</span>
           </p>
 
           <div class="screen-container">
